# ttgammaSplitter

./: CMakeLists.txt  README.md  setup.sh
Root/: ttgammaSplitter.cxx
include/: ttgammaSplitter.h
scripts/: batch_creator.py
